Added --add-opens to open java.lang to our module