@@ -66,8 +66,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <forkCount>0</forkCount>
-                    <argLine>--add-reads eu.javaspecialists.books.dynamicproxies=java.sql</argLine>
+                    <argLine>--add-opens java.base/java.lang=eu.javaspecialists.books.dynamicproxies --add-reads eu.javaspecialists.books.dynamicproxies=java.sql</argLine>
                 </configuration>
             </plugin>
         </plugins>
